# opengl-attitude-visualisation

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/gl-renderables/: Centroid.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Grid.cpp  Grid.h  Orientation.cpp  Orientation.h  RenderableData.cpp  RenderableData.h
src/gl-renderer/: CMakeLists.txt  GLMathematics.cpp  GLMathematics.h  IndexBuffer.cpp  IndexBuffer.h  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  VertexBuffer.h
